# Pferderennen

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  files.cmake
app/include/: Main.h
app/source/: Main.cpp
assets/: GameConfig.xml
dependencies/savedGames/: 22.12.2020 - C0pZ-Magj-qugN-LGnk.xml
doc/: Doxyfile.in
libs/0-Plugins/: CMakeLists.txt  files.cmake
libs/0-Plugins/include/: AssetConfig.h  IConfig.h  IQViewWidget.h  QDistributeSipsWidget.h  QEnterPlayerWidget.h  QGameWidget.h  QPlaceBetsWidget.h  QSelectGameModeWidget.h  QView.h  QtPlugin.h  SizeConfig.h
libs/0-Plugins/source/: QDistributeSipsWidget.cpp  QEnterPlayerWidget.cpp  QGameWidget.cpp  QPlaceBetsWidget.cpp  QSelectGameModeWidget.cpp  QView.cpp  QtPlugin.cpp
libs/1-Adapters/: CMakeLists.txt  files.cmake
libs/1-Adapters/include/: Controller.h  GameView.h  IController.h  IModel.h  IObserver.h  ISubject.h  IView.h  Model.h
libs/1-Adapters/source/: Controller.cpp  Model.cpp
libs/2-Application/: CMakeLists.txt  files.cmake
libs/2-Application/include/: DrawCardUseCase.h  EnterPlayerUseCase.h  GameController.h  GameModeSelector.h  GameView.h  GetGameModeSelectionUseCase.h  GetVictoriousPlayerBetsUseCase.h  InitializeGameUseCase.h  ShuffleDeckUseCase.h
libs/2-Application/source/: DrawCardUseCase.cpp  EnterPlayerUseCase.cpp  GameController.cpp  GetGameModeSelectionUseCase.cpp  GetVictoriousPlayerBetsUseCase.cpp  InitializeGameUseCase.cpp  ShuffleDeckUseCase.cpp
libs/3-Domain/: CMakeLists.txt  files.cmake
libs/3-Domain/include/: Bet.h  Card.h  CardConverter.h  CardDeck.h  CardDeckType.h  CardIdentifier.h  CardPip.h  CardSuit.h  GameMode.h  Player.h  SipDistribution.h
libs/3-Domain/source/: Bet.cpp  Card.cpp  CardConverter.cpp  CardDeck.cpp
libs/4-Abstraction/: CMakeLists.txt  files.cmake
libs/4-Abstraction/include/: Player.h
libs/4-Plate/: CMakeLists.txt
scripts/: cmake.sh  coverage.sh  test.sh
test/include/: CardDeckTest.h  DrawCardTest.h  MockedControllerMockTest.h  example.h
test/source/: CardDeckTest.cpp  DrawCardTest.cpp  MockedControllerMockTest.cpp  example.cpp
